--- a/GC/GC.vbproj
+++ b/GC/GC.vbproj
@@ -159,6 +159,12 @@
     <Compile Include="f_InscriptionInternaute.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="f_ModifierCommande.Designer.vb">
+      <DependentUpon>f_ModifierCommande.vb</DependentUpon>
+    </Compile>
+    <Compile Include="f_ModifierCommande.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="f_Principal.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -230,6 +236,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="f_InscriptionInternaute.resx">
       <DependentUpon>f_InscriptionInternaute.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="f_ModifierCommande.resx">
+      <DependentUpon>f_ModifierCommande.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="f_Principal.resx">
       <DependentUpon>f_Principal.vb</DependentUpon>
